js/js.translator/testData/incremental/invalidation/interfaceSuperUsage/lib1/ClassB.6.kt
class ClassB : Interface {
    konst x = 3

    override konst someValue: Int
        get() = super.someValue + 1
}
